infrastructure/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-optimizer-service
  namespace: default
  labels:
    app: test-optimizer
spec:
  type: ClusterIP
  selector:
    app: test-optimizer
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  sessionAffinity: None
  publishNotReadyAddresses: false
---
apiVersion: v1
kind: Service
metadata:
  name: test-optimizer-lb
  namespace: default
  labels:
    app: test-optimizer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: test-optimizer
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  externalTrafficPolicy: Cluster
